--- a/i3/config
+++ b/i3/config
@@ -1,9 +1,9 @@
 set $mod Mod4
-font pango:Hack 9
+font Google Sans:GoogleSans-Medium 9
 floating_modifier $mod
 
 # start a terminal
-set $term alacritty
+set $term kitty
 bindsym $mod+Return exec $term
 
 # kill focused window
@@ -11,7 +11,7 @@ bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 #bindsym ctrl+space exec rofi -show run
-bindsym ctrl+space exec "rofi -show combi -modi window,run,combi -combi-modi window,run"
+bindsym ctrl+space exec "rofi -show combi -modi window,run,combi -combi-modi window,run -font 'Google Sans 16'"
 #bindsym ctrl+space exec dmenu_run
 
 # alternatively, you can use the cursor keys:
@@ -136,7 +136,7 @@ client.background       #ffffff
 ########################################################################
 ########################################################################
 
-exec --no-startup-id "i3-msg 'workspace 1; exec alacritty'"
+exec --no-startup-id "i3-msg 'workspace 1; exec kitty'"
 
 ########################################################################
 ########################################################################
@@ -195,6 +195,7 @@ bindsym $mod+l exec "sleep 0.1 && i3lock --blur 5"
 #exec_always setxkbmap -option grp:caps_toggle "us,ru" -option "grp:caps_toggle,grp_led:caps"
 
 exec xrandr --output HDMI-A-0 --mode 1920x1080 --rate 60 --scale 1x1
+exec echo 2000 | sudo tee /sys/kernel/mm/lru_gen/min_ttl_ms
 #exec xrandr --auto --output HDMI-1 --mode 1920x1080 --above HDMI-2
 
 exec feh --bg-fill ~/.config/i3/wallpaper.png
