--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -21,8 +21,8 @@ round-borders-exclude = [
 shadow = false;
 shadow-radius = 2;
 shadow-opacity = 1;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
+shadow-offset-x = -2;
+shadow-offset-y = -2;
 # no-dock-shadow = false
 # no-dnd-shadow = false
 # shadow-red = 0
@@ -38,11 +38,11 @@ shadow-exclude = [
 
 # Fading
 fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-in-step = 0.08;
+fade-out-step = 0.08;
 # fade-delta = 10
 fade-exclude = [
-  "class_g = 'slop'"   # maim
+  "class_g = 'slop'",  # maim
 ]
 # no-fading-openclose = false
 # no-fading-destroyed-argb = false
@@ -52,8 +52,8 @@ fade-exclude = [
 inactive-opacity = 1;
 frame-opacity = 0.7;
 # menu-opacity = 1.0
-popup_menu = { opacity = 0.8; }
-dropdown_menu = { opacity = 0.8; }
+popup_menu = { opacity = 1; }
+dropdown_menu = { opacity = 1; }
 inactive-opacity-override = false;
 active-opacity = 1.0;
  inactive-dim = 0.2
@@ -90,17 +90,17 @@ opacity-rule = [
 # blur-background-fixed = false;
 # blur-kern = ''
 # blur-kern = "3x3box";
-blur: {
+#blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
-  strength = 8;
-  deviation = 0.0;
-  kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
+  #method = "dual_kawase";
+  #strength = 8;
+  #deviation = 0.0;
+  #kernel = "11x11gaussian";
+  #background = false;
+  #background-frame = false;
+  #background-fixed = false;
+  #kern = "3x3box";
+#}
 blur-background-exclude = [
   "class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
@@ -114,7 +114,6 @@ mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0
 # sw-opti =
 # use-ewmh-active-win = false
 unredir-if-possible = true
