--- a/polybar/config
+++ b/polybar/config
@@ -56,7 +56,7 @@ padding-right = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = Hack:pixelsize=9;3
+font-0 = GoogleSans-Medium:pixelsize=15;3
 font-2 = "Wuncon Siji:pixelsize=10;3"
 font-1 = Weather Icons:style=Regular:size=10;2
 font-3 = FontAwesome5Free:style=Solid:pixelsize=10;3
